[gd_scene load_steps=25 format=3 uid="uid://b52xgjrbhdaid"]

[ext_resource type="Script" uid="uid://t8vo420x2ral" path="res://Scripts/BattleScene.gd" id="1_ttbo7"]
[ext_resource type="Script" uid="uid://cb1pjbgdf4lc6" path="res://Scripts/MoveRangeDisplay/MoveRangeConfig.gd" id="3_config"]
[ext_resource type="Script" uid="uid://bfa3v18im6o2q" path="res://Scripts/MoveRangeDisplay/MoveRangeCache.gd" id="4_cache"]
[ext_resource type="Script" uid="uid://bie8uws4ucn30" path="res://Scripts/MoveRangeDisplay/MoveRangeRenderer.gd" id="5_renderer"]
[ext_resource type="Script" uid="uid://dknsxb7ca24bu" path="res://Scripts/MoveRangeDisplay/MoveRangeInput.gd" id="6_input"]
[ext_resource type="Script" uid="uid://b2apje2r642e7" path="res://Scripts/MoveRangeDisplay/MoveRangeController.gd" id="7_controller"]
[ext_resource type="Script" uid="uid://drypleef3f15s" path="res://Scripts/ActionSystemNew.gd" id="8_action"]
[ext_resource type="Script" uid="uid://dyh75kx3tamj8" path="res://Scripts/MoveRangeDisplay/MoveRangeValidator.gd" id="9_validator"]
[ext_resource type="Script" uid="uid://cnhfc1l0oimui" path="res://Scripts/BattleManager.gd" id="10_battle_manager"]
[ext_resource type="Script" uid="uid://cap64rn2tse11" path="res://Scripts/Battle/TurnManager.gd" id="11_turn_manager"]
[ext_resource type="Script" uid="uid://bjs8q4dytq56d" path="res://Scripts/Battle/ParticipantManager.gd" id="12_participant_manager"]
[ext_resource type="Script" uid="uid://br0bggdpa1a62" path="res://Scripts/SkillManager.gd" id="13_skill_manager"]
[ext_resource type="Script" uid="uid://dujoutvyfy067" path="res://Scripts/SkillEffects.gd" id="14_skill_effects"]
[ext_resource type="Script" uid="uid://bi03nucpovllo" path="res://Scripts/Battle/BattleUIManager.gd" id="15_battle_ui_manager"]
[ext_resource type="Script" uid="uid://0ds20u50tjpp" path="res://Scripts/Battle/SkillSelectionCoordinator.gd" id="16_skill_selection_coordinator"]
[ext_resource type="Script" uid="uid://cl53lik45jqw" path="res://Scripts/MovementCoordinator.gd" id="17_movement_coordinator"]
[ext_resource type="Script" uid="uid://dfgbxqfbldrl4" path="res://Scripts/Battle/BattleFlowManager.gd" id="18_battle_flow_manager"]
[ext_resource type="Script" uid="uid://tbbyaet2jdql" path="res://Scripts/Battle/BattleInputHandler.gd" id="19_battle_input_handler"]
[ext_resource type="Script" uid="uid://cttyjepbwqc6k" path="res://Scripts/Battle/BattleAnimationManager.gd" id="20_battle_animation_manager"]
[ext_resource type="Script" uid="uid://ym2f2e1qb071" path="res://Scripts/Battle/BattleVisualEffectsManager.gd" id="21_battle_visual_effects_manager"]
[ext_resource type="Script" uid="uid://c37wpjwowes76" path="res://Scripts/Battle/BattleCombatManager.gd" id="22_battle_combat_manager"]
[ext_resource type="Script" uid="uid://cqeyji86etbuj" path="res://Scripts/Battle/BattleAIManager.gd" id="23_battle_ai_manager"]
[ext_resource type="Script" uid="uid://73e3mc0sdlbw" path="res://Scripts/Battle/BattleEventManager.gd" id="24_battle_event_manager"]
[ext_resource type="Script" uid="uid://73ell8m44daj" path="res://Scripts/ObstacleManager.gd" id="25_obstacle_manager"]

[node name="战斗场景" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ttbo7")

[node name="TheLevel" type="Node" parent="."]

[node name="ObstacleManager" type="Node2D" parent="TheLevel"]
script = ExtResource("25_obstacle_manager")

[node name="Players" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="BattleSystems" type="Node" parent="."]

[node name="BattleUIManager" type="Control" parent="BattleSystems"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("15_battle_ui_manager")

[node name="SkillSelectionCoordinator" type="Node" parent="BattleSystems"]
script = ExtResource("16_skill_selection_coordinator")

[node name="MovementCoordinator" type="Node" parent="BattleSystems"]
script = ExtResource("17_movement_coordinator")

[node name="BattleFlowManager" type="Node" parent="BattleSystems"]
script = ExtResource("18_battle_flow_manager")

[node name="BattleInputHandler" type="Node" parent="BattleSystems"]
script = ExtResource("19_battle_input_handler")

[node name="BattleAnimationManager" type="Node" parent="BattleSystems"]
script = ExtResource("20_battle_animation_manager")

[node name="BattleVisualEffectsManager" type="Node" parent="BattleSystems"]
script = ExtResource("21_battle_visual_effects_manager")

[node name="BattleCombatManager" type="Node" parent="BattleSystems"]
script = ExtResource("22_battle_combat_manager")

[node name="BattleAIManager" type="Node" parent="BattleSystems"]
script = ExtResource("23_battle_ai_manager")

[node name="BattleEventManager" type="Node" parent="BattleSystems"]
script = ExtResource("24_battle_event_manager")

[node name="MoveRange" type="Node" parent="."]

[node name="Config" type="Node" parent="MoveRange"]
script = ExtResource("3_config")

[node name="Cache" type="Node" parent="MoveRange"]
script = ExtResource("4_cache")

[node name="Validator" type="Node" parent="MoveRange"]
script = ExtResource("9_validator")

[node name="Renderer" type="Node2D" parent="MoveRange"]
script = ExtResource("5_renderer")

[node name="Input" type="Node" parent="MoveRange"]
script = ExtResource("6_input")

[node name="Controller" type="Node" parent="MoveRange"]
script = ExtResource("7_controller")

[node name="ActionSystem" type="Node" parent="."]
script = ExtResource("8_action")

[node name="SkillManager" type="Node" parent="."]
script = ExtResource("13_skill_manager")

[node name="SkillEffects" type="Node2D" parent="."]
script = ExtResource("14_skill_effects")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("10_battle_manager")

[node name="TurnManager" type="Node" parent="BattleManager"]
script = ExtResource("11_turn_manager")

[node name="ParticipantManager" type="Node" parent="BattleManager"]
script = ExtResource("12_participant_manager")

[node name="CollisionTest" type="Area2D" parent="."]
